# CUDA-CL-GameOfLife

./: .gitignore  CMakeLists.txt  Makefile  README.md
experiment/: cl.csv  cl_block.csv  cl_if.csv  cpu.csv  cpu_block.csv  cpu_if.csv  cuda.csv  cuda_block.csv  cuda_if.csv  exp.ipynb
src/: CMakeLists.txt  kernel.cpp  kernel.h  main.cpp
src/cl/: CMakeLists.txt  a.txt  game_of_life  kernel.cl  kernel.cpp  kernel.h  kernel_cond.cl  main.cpp  mainAlt.cpp  opencl_setup.cpp  opencl_setup.h
src/cuda/: kernel.cu  kernel.cuh  main.cu
